--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowOutputModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowOutputModal.xaml
@@ -35,7 +35,7 @@
                               SchemaJson="{Binding Workflow.OutputSchemaJson, Mode=TwoWay}"
                               SettingsJson="{Binding Workflow.OutputMappingJson, Mode=TwoWay}" />
         
-        <CheckBox Grid.Row="1" IsChecked="{Binding EndTask.Settings.WaitAll, Mode=TwoWay}" Checked="HandleWaitAllChanged" Unchecked="HandleWaitAllChanged">Wait for all inputs</CheckBox>
+        <CheckBox Grid.Row="1" IsChecked="{Binding EndTask.Settings.IsWaitingAllInputs, Mode=TwoWay}" Checked="HandleWaitAllChanged" Unchecked="HandleWaitAllChanged">Wait for all inputs</CheckBox>
 
         <StackPanel
             Orientation="Horizontal"
