--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/TaskInputSettingModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/TaskInputSettingModal.xaml
@@ -24,7 +24,7 @@
                               SettingsJson="{Binding Task.InputJson, Mode=TwoWay}"
                               DoesSettingUpdateSchema="False"/>
 
-        <CheckBox Grid.Row="1" IsChecked="{Binding Task.Settings.WaitAll, Mode=TwoWay}" Checked="HandleWaitAllChanged" Unchecked="HandleWaitAllChanged">Wait for all inputs</CheckBox>
+        <CheckBox Grid.Row="1" IsChecked="{Binding Task.Settings.IsWaitingAllInputs, Mode=TwoWay}" Checked="HandleWaitAllChanged" Unchecked="HandleWaitAllChanged">Wait for all inputs</CheckBox>
         
         <StackPanel
             Orientation="Horizontal"
