Fix context mapping and reference handler

--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/ContextMapping.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/ContextMapping.xaml
@@ -26,10 +26,11 @@
     <Grid DataContext="{Binding ElementName=ContainerElement}" Margin="2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <Grid Width="170">
+        <Grid MinWidth="170">
             <Grid.Style>
                 <Style TargetType="Grid">
                     <Style.Triggers>
@@ -71,7 +72,15 @@
             </ItemsControl>
         </Grid>
 
-        <Grid Grid.Column="1" Margin="2,0,0,0">
+        <GridSplitter
+            Grid.Column="1"
+            Margin="2,0"
+            Background="{StaticResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
+            ShowsPreview="True"
+            Width="2" />
+
+        
+        <Grid Grid.Column="2" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*" />
                 <RowDefinition Height="6" />
